# Short-URL-Generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO:TODO  app.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  utils.py
config/: nginx.conf
db/: db.py  models.py  schemas.py
db/db_data/: postmaster.pid
db/db_data/base/13823/: 1247  1249  1259  1259_vm  16392  16397  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
db/db_data/base/16384/: 1247  1249  1259  16385  16389  16390  2579  2606  2608  2610  2610_vm  2619  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
db/db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
db/db_data/pg_stat/: db_0.stat  db_13823.stat  db_16384.stat  global.stat
db/db_data/pg_stat_tmp/: db_0.stat  db_13823.stat  db_16384.stat  global.stat
test/: test_app.py
